packages/isar_community_generator/test/errors/index/object_hashed.dart
// objects may not be indexed

import 'package:isar_community/isar.dart';

@collection
class Model {
  Id? id;

  @Index()
  EmbeddedModel? obj;
}

@embedded
class EmbeddedModel {}
